--- a/_sass/color_schemes/piconav.scss
+++ b/_sass/color_schemes/piconav.scss
@@ -18,8 +18,8 @@ $body-text-color: $cream;
 $body-heading-color: $cream;
 
 // Keep dark background
-$body-background-color: $teal;
-$sidebar-color: darken($teal, 5%);
+//$body-background-color: $teal;
+//$sidebar-color: darken($teal, 5%);
 
 // Navigation colors
 $nav-child-link-color: $cream;
