--- a/_sass/color_schemes/piconav.scss
+++ b/_sass/color_schemes/piconav.scss
@@ -8,6 +8,7 @@ $pink: #FF7573;
 $cream: #E6EBC5;
 $peach: #FFCE94;
 $teal: #00313A;
+$bg: #080C0D;
 
 // Override link colors (replace blue with pink)
 $link-color: $pink;
@@ -18,6 +19,7 @@ $body-text-color: $cream;
 $body-heading-color: $cream;
 
 // Keep dark background
+$body-background-color: $teal;
 //$body-background-color: $teal;
 //$sidebar-color: darken($teal, 5%);
 
