--- a/_sass/color_schemes/piconav.scss
+++ b/_sass/color_schemes/piconav.scss
@@ -8,7 +8,7 @@ $pink: #FF7573;
 $cream: #E6EBC5;
 $peach: #FFCE94;
 $teal: #00313A;
-$bg: #080C0D;
+$bg: #141B1C;
 
 // Override link colors (replace blue with pink)
 $link-color: $pink;
